src/main/java/he_new/parser/src/main/antlr/HE_NewParser.java
// Generated from src\main\antlr\HE_New.g4 by ANTLR 4.13.0
package he_new.parser;

package he_new.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class HE_NewParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SUMMON=1, WITH=2, NAMED=3, AS=4, MAKE=5, LIKE=6, HAS=7, CAN=8, ON=9, IS=10, 
		PRINT=11, TELL=12, TO=13, SHOW=14, CENTERED=15, WAIT=16, SECONDS=17, AND=18, 
		IMAGE=19, SOUND=20, MUSIC=21, VIDEO=22, FONT=23, SHADER=24, STRING_TYPE=25, 
		NUMBER_TYPE=26, BOOLEAN_TYPE=27, COLON=28, LBRACK=29, RBRACK=30, LPAREN=31, 
		RPAREN=32, COMMA=33, TILDA=34, LBRACE=35, RBRACE=36, DOT=37, PLUS=38, 
		MINUS=39, MULT=40, DIV=41, COMMENT=42, ID=43, NUMBER=44, STRING=45, NEWLINE=46, 
		WS=47;
	public static final int
		RULE_program = 0, RULE_line = 1, RULE_summon = 2, RULE_withAssets = 3, 
		RULE_assetList = 4, RULE_asset = 5, RULE_assetType = 6, RULE_object = 7, 
		RULE_objectBody = 8, RULE_objectSection = 9, RULE_propertiesSection = 10, 
		RULE_propertyBlock = 11, RULE_property = 12, RULE_abilitiesSection = 13, 
		RULE_abilityBlock = 14, RULE_method = 15, RULE_paramList = 16, RULE_parameter = 17, 
		RULE_reactionSection = 18, RULE_type = 19, RULE_statement = 20, RULE_printStmt = 21, 
		RULE_callStmt = 22, RULE_showStmt = 23, RULE_waitStmt = 24, RULE_assignmentStmt = 25, 
		RULE_argList = 26, RULE_expression = 27, RULE_additiveExpression = 28, 
		RULE_multiplicativeExpression = 29, RULE_primaryExpression = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "line", "summon", "withAssets", "assetList", "asset", "assetType", 
			"object", "objectBody", "objectSection", "propertiesSection", "propertyBlock", 
			"property", "abilitiesSection", "abilityBlock", "method", "paramList", 
			"parameter", "reactionSection", "type", "statement", "printStmt", "callStmt", 
			"showStmt", "waitStmt", "assignmentStmt", "argList", "expression", "additiveExpression", 
			"multiplicativeExpression", "primaryExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'summon'", "'with'", "'named'", "'as'", "'make'", "'like'", "'has'", 
			"'can'", "'on'", "'is'", "'print'", "'tell'", "'to'", "'show'", "'centered'", 
			"'wait'", "'seconds'", "'and'", "'image'", "'sound'", "'music'", "'video'", 
			"'font'", "'shader'", "'string'", "'number'", "'boolean'", "':'", "'['", 
			"']'", "'('", "')'", "','", "'~'", "'{'", "'}'", "'.'", "'+'", "'-'", 
			"'*'", "'/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SUMMON", "WITH", "NAMED", "AS", "MAKE", "LIKE", "HAS", "CAN", 
			"ON", "IS", "PRINT", "TELL", "TO", "SHOW", "CENTERED", "WAIT", "SECONDS", 
			"AND", "IMAGE", "SOUND", "MUSIC", "VIDEO", "FONT", "SHADER", "STRING_TYPE", 
			"NUMBER_TYPE", "BOOLEAN_TYPE", "COLON", "LBRACK", "RBRACK", "LPAREN", 
			"RPAREN", "COMMA", "TILDA", "LBRACE", "RBRACE", "DOT", "PLUS", "MINUS", 
			"MULT", "DIV", "COMMENT", "ID", "NUMBER", "STRING", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HE_New.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HE_NewParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HE_NewParser.EOF, 0); }
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 70368744177702L) != 0)) {
				{
				{
				setState(62);
				line();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineContext extends ParserRuleContext {
		public SummonContext summon() {
			return getRuleContext(SummonContext.class,0);
		}
		public WithAssetsContext withAssets() {
			return getRuleContext(WithAssetsContext.class,0);
		}
		public ObjectContext object() {
			return getRuleContext(ObjectContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(HE_NewParser.NEWLINE, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterLine(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitLine(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitLine(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineContext line() throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_line);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUMMON:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				summon();
				}
				break;
			case WITH:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				withAssets();
				}
				break;
			case MAKE:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				object();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SummonContext extends ParserRuleContext {
		public TerminalNode SUMMON() { return getToken(HE_NewParser.SUMMON, 0); }
		public TerminalNode STRING() { return getToken(HE_NewParser.STRING, 0); }
		public TerminalNode ID() { return getToken(HE_NewParser.ID, 0); }
		public TerminalNode AS() { return getToken(HE_NewParser.AS, 0); }
		public TerminalNode NAMED() { return getToken(HE_NewParser.NAMED, 0); }
		public SummonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_summon; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterSummon(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitSummon(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitSummon(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SummonContext summon() throws RecognitionException {
		SummonContext _localctx = new SummonContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_summon);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(SUMMON);
			setState(77);
			match(STRING);
			setState(78);
			_la = _input.LA(1);
			if ( !(_la==NAMED || _la==AS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(79);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WithAssetsContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(HE_NewParser.WITH, 0); }
		public AssetListContext assetList() {
			return getRuleContext(AssetListContext.class,0);
		}
		public WithAssetsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_withAssets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterWithAssets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitWithAssets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitWithAssets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WithAssetsContext withAssets() throws RecognitionException {
		WithAssetsContext _localctx = new WithAssetsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_withAssets);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(WITH);
			setState(82);
			assetList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssetListContext extends ParserRuleContext {
		public List<AssetContext> asset() {
			return getRuleContexts(AssetContext.class);
		}
		public AssetContext asset(int i) {
			return getRuleContext(AssetContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(HE_NewParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(HE_NewParser.AND, i);
		}
		public AssetListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assetList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterAssetList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitAssetList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitAssetList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssetListContext assetList() throws RecognitionException {
		AssetListContext _localctx = new AssetListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assetList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			asset();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(85);
				match(AND);
				setState(86);
				asset();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssetContext extends ParserRuleContext {
		public AssetTypeContext assetType() {
			return getRuleContext(AssetTypeContext.class,0);
		}
		public TerminalNode STRING() { return getToken(HE_NewParser.STRING, 0); }
		public TerminalNode NAMED() { return getToken(HE_NewParser.NAMED, 0); }
		public TerminalNode ID() { return getToken(HE_NewParser.ID, 0); }
		public AssetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asset; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterAsset(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitAsset(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitAsset(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssetContext asset() throws RecognitionException {
		AssetContext _localctx = new AssetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_asset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			assetType();
			setState(93);
			match(STRING);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NAMED) {
				{
				setState(94);
				match(NAMED);
				setState(95);
				match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssetTypeContext extends ParserRuleContext {
		public TerminalNode IMAGE() { return getToken(HE_NewParser.IMAGE, 0); }
		public TerminalNode SOUND() { return getToken(HE_NewParser.SOUND, 0); }
		public TerminalNode MUSIC() { return getToken(HE_NewParser.MUSIC, 0); }
		public TerminalNode VIDEO() { return getToken(HE_NewParser.VIDEO, 0); }
		public TerminalNode FONT() { return getToken(HE_NewParser.FONT, 0); }
		public TerminalNode SHADER() { return getToken(HE_NewParser.SHADER, 0); }
		public AssetTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assetType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterAssetType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitAssetType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitAssetType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssetTypeContext assetType() throws RecognitionException {
		AssetTypeContext _localctx = new AssetTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assetType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 33030144L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectContext extends ParserRuleContext {
		public TerminalNode MAKE() { return getToken(HE_NewParser.MAKE, 0); }
		public List<TerminalNode> ID() { return getTokens(HE_NewParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(HE_NewParser.ID, i);
		}
		public TerminalNode LBRACE() { return getToken(HE_NewParser.LBRACE, 0); }
		public ObjectBodyContext objectBody() {
			return getRuleContext(ObjectBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(HE_NewParser.RBRACE, 0); }
		public TerminalNode LIKE() { return getToken(HE_NewParser.LIKE, 0); }
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitObject(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(MAKE);
			setState(101);
			match(ID);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIKE) {
				{
				setState(102);
				match(LIKE);
				setState(103);
				match(ID);
				}
			}

			setState(106);
			match(LBRACE);
			setState(107);
			objectBody();
			setState(108);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectBodyContext extends ParserRuleContext {
		public List<ObjectSectionContext> objectSection() {
			return getRuleContexts(ObjectSectionContext.class);
		}
		public ObjectSectionContext objectSection(int i) {
			return getRuleContext(ObjectSectionContext.class,i);
		}
		public ObjectBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterObjectBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitObjectBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitObjectBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectBodyContext objectBody() throws RecognitionException {
		ObjectBodyContext _localctx = new ObjectBodyContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_objectBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ON || _la==ID) {
				{
				{
				setState(110);
				objectSection();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ObjectSectionContext extends ParserRuleContext {
		public PropertiesSectionContext propertiesSection() {
			return getRuleContext(PropertiesSectionContext.class,0);
		}
		public AbilitiesSectionContext abilitiesSection() {
			return getRuleContext(AbilitiesSectionContext.class,0);
		}
		public ReactionSectionContext reactionSection() {
			return getRuleContext(ReactionSectionContext.class,0);
		}
		public ObjectSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objectSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterObjectSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitObjectSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitObjectSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ObjectSectionContext objectSection() throws RecognitionException {
		ObjectSectionContext _localctx = new ObjectSectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_objectSection);
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				propertiesSection();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				abilitiesSection();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				reactionSection();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertiesSectionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HE_NewParser.ID, 0); }
		public TerminalNode HAS() { return getToken(HE_NewParser.HAS, 0); }
		public TerminalNode COLON() { return getToken(HE_NewParser.COLON, 0); }
		public List<PropertyBlockContext> propertyBlock() {
			return getRuleContexts(PropertyBlockContext.class);
		}
		public PropertyBlockContext propertyBlock(int i) {
			return getRuleContext(PropertyBlockContext.class,i);
		}
		public PropertiesSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertiesSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterPropertiesSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitPropertiesSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitPropertiesSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertiesSectionContext propertiesSection() throws RecognitionException {
		PropertiesSectionContext _localctx = new PropertiesSectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_propertiesSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(ID);
			setState(122);
			match(HAS);
			setState(123);
			match(COLON);
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124);
				propertyBlock();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LBRACK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyBlockContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(HE_NewParser.LBRACK, 0); }
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(HE_NewParser.RBRACK, 0); }
		public PropertyBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterPropertyBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitPropertyBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitPropertyBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyBlockContext propertyBlock() throws RecognitionException {
		PropertyBlockContext _localctx = new PropertyBlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_propertyBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(LBRACK);
			setState(130);
			property();
			setState(131);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(HE_NewParser.ID, 0); }
		public TerminalNode IS() { return getToken(HE_NewParser.IS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HE_NewListener ) ((HE_NewListener)listener).exitProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HE_NewVisitor ) return ((HE_NewVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}
